# soem-rosbuild

./: CMakeLists.txt  Makefile  README.md  manifest.xml
src/make/: rules.mk
src/osal/linux/: osal.c
src/oshw/linux/: nicdrv.c  nicdrv.h
src/soem/: ethercatconfig.c  ethercatprint.c  ethercatprint.h
src/test/linux/simple_test/: simple_test.c
src/test/linux/slaveinfo/: slaveinfo.c
